esqueleto-da-primeira-section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,48 @@
         <strong>Pretendo criar uma página web simples utilizando diversas tags aprendidas no primeiro módulo do curso DIO Formação HTML Developer. </strong>
         <hr>
     </header>
+    <main>
+        <section>
+            <h2>Conteúdos que eu aprendi no curso </h2>
+            <p>Durante as aulas eu aprendi diversas tags, como por exemplo: </p>
+            <ul>
+                <li>
+                    <mark></mark>
+                </li>
+                <li>
+                    <mark></mark>
+                </li>
+                <li>
+                    <mark></mark>
+                </li>
+                <li>
+                    <mark></mark>
+                </li>
+                <li>
+                    <mark></mark>
+                </li>
+                <li>
+                    <mark></mark>
+                </li>
+                <li>
+                    <mark></mark>
+                </li>
+                <li>
+                    <mark></mark>
+                </li>
+                <li>
+                    <mark></mark>
+                </li>
+                <li>
+                    <mark></mark>
+                </li>
+                <li>
+                    <mark></mark>
+                </li>
+            </ul>
+        </section>
+    </main>
+
 
 </body>
 </html>
