cinteudo-da-lista

--- a/index.html
+++ b/index.html
@@ -18,39 +18,47 @@
             <p>Durante as aulas eu aprendi diversas tags, como por exemplo: </p>
             <ul>
                 <li>
-                    <mark></mark>
+                    <mark>Tags H1 até H6</mark>
                 </li>
                 <li>
-                    <mark></mark>
+                    <mark>Tag p> </mark>
                 </li>
                 <li>
-                    <mark></mark>
+                    <mark>Tag mark</mark>
                 </li>
                 <li>
-                    <mark></mark>
+                    <mark>Tag Small </mark>
                 </li>
                 <li>
-                    <mark></mark>
+                    <mark>Tag i </mark>
                 </li>
                 <li>
-                    <mark></mark>
+                    <mark>Tag u </mark>
                 </li>
                 <li>
-                    <mark></mark>
+                    <mark>Tag strong </mark>
                 </li>
                 <li>
-                    <mark></mark>
+                    <mark>Tags ol, ul, li  </mark>
                 </li>
                 <li>
-                    <mark></mark>
+                    <mark>Tags sub e sup </mark>
                 </li>
                 <li>
-                    <mark></mark>
+                    <mark>Tag li </mark>
                 </li>
                 <li>
-                    <mark></mark>
+                    <mark>tags a, hr e blockquote </mark>
+                </li>
+                <li>
+                    <p>Outras Tags </p>
+                    <mark>Tag font </mark>
+                    <mark>Tag del </mark>
+                    <mark>tag abbr</mark>
                 </li>
             </ul>
+            
+            
         </section>
     </main>
 
