--- a/index.html
+++ b/index.html
@@ -59,7 +59,23 @@
             </ul>
         </section>
         <section>
-            
+            <div>
+                <h2>Resumo das tags de cabeçalho h1 a h6</h2>
+                <h2>Função: Representam uma hierarquia de títulos, sendo o h1 o mais importante e seguindo até o h6</h2>
+                <h3>Como usar: </h3>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </ul>
+            </div>
+
         </section>
     </main>
 
