section-tags-cabecalho

--- a/index.html
+++ b/index.html
@@ -64,15 +64,10 @@
                 <h2>Função: Representam uma hierarquia de títulos, sendo o h1 o mais importante e seguindo até o h6</h2>
                 <h3>Como usar: </h3>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
+                    <li>Navegação e Acessibilidade: Auxiliam na criação automática de tabelas de conteúdos e navegação em leitores de tela como o NVDA</li>
+                    <li>É bom evitar múltiplos h1 na mesma página.</li>
+                    <li>Estilizar é melhor num arquivo CSS e não no cabeçalho</li>
+                    <li>As tags cabeçalho podem ser usadas para organizar seções e subseções de conteúdo.</li>
                 </ul>
             </div>
 
