--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 </li>
                 <li>
                     <p>Outras Tags </p>
-                    <mark>Tag font </mark>
-                    <mark>Tag del </mark>
-                    <mark>tag abbr</mark>
+                    <mark>Tag font, </mark>
+                    <mark>Tag del, </mark>
+                    <mark>tag abbr.</mark>
                 </li>
             </ul>
         </section>
@@ -70,7 +70,21 @@
                     <li>As tags cabeçalho podem ser usadas para organizar seções e subseções de conteúdo.</li>
                 </ul>
             </div>
-
+        </section>
+        <section>
+            <h1>O Elemento HTML "p" representa um parágrafo.</h1>
+            <p>Corresponde a um conteúdo de fluxo, um conteúdo palpável. O que sua página quer apresentar.</p>
+            <strong>São permitidos conteúdos de frases.</strong>
+            <p>A tag de início é obrigatória. A tag de fechamento pode ser omitida se o elemento "p" for imediatamente seguido por um elemento de bloco ou se não houver mais conteúdo no elemento pai.</p>
+            <p> Para uso dinâmico, sua interface DOM é HTMLParagraphElement.</p>
+            <li>
+                <p>Referente à Acessibilidade:</p>
+                <mark>Dividir o conteúdo em parágrafos ajuda a tornar uma página mais acessível. Leitores de tela e outras tecnologias asssistivas oferecem atalhos para permitir que os usuários pulem para o próximo ou o parágrafo anterior, permitindo que naveguem pelo conteúdo, assim como o espaço em branco permite aos usuários visuais saltar entre o conteúdo.</mark>
+                <mark>Não é recomendável usar elementos vazios, os leitores de tela podem anunciar a presença de parágrafo, mas não seu conteúdo. Ao precisar de espaço extra esse estilo deve ser colocado no arquivo CSS.</mark>
+            </li>
+        </section>
+        <section>
+            
         </section>
     </main>
 
