--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </section>
         <section>
-            <h1>O Elemento HTML "p" representa um parágrafo.</h1>
+            <h2>O Elemento HTML "p" representa um parágrafo.</h2>
             <p>Corresponde a um conteúdo de fluxo, um conteúdo palpável. O que sua página quer apresentar.</p>
             <strong>São permitidos conteúdos de frases.</strong>
             <p>A tag de início é obrigatória. A tag de fechamento pode ser omitida se o elemento "p" for imediatamente seguido por um elemento de bloco ou se não houver mais conteúdo no elemento pai.</p>
@@ -84,8 +84,20 @@
             </li>
         </section>
         <section>
-            
+            <div>
+                <h2>MARK:A TAG de texto com marcação</h2>
+                <p>O Elemento HTML mark representa um texto que está marcado ou destacado para referência ou propósito de anotação <mark>devido à relevância do trecho</mark> no contexto em que está inserido.</p>
+                <strong>Casos típicos de usos da Tag mark</strong>
+                <p>Quando usado em uma citação TQG q, ou citação em bloco TAG blockquote indica texto de interece especial que não está marcado na fonte original.</p>
+                <p>É como usar uma caneta marca texto em um livro para destacar trechos de seu interesse.</p>
+                <li>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </li>
+            </div>
         </section>
+       
     </main>
 
 
