tag-mark-completo

--- a/index.html
+++ b/index.html
@@ -90,13 +90,30 @@
                 <strong>Casos típicos de usos da Tag mark</strong>
                 <p>Quando usado em uma citação TQG q, ou citação em bloco TAG blockquote indica texto de interece especial que não está marcado na fonte original.</p>
                 <p>É como usar uma caneta marca texto em um livro para destacar trechos de seu interesse.</p>
-                <li>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                </li>
+                <p>Mark não se confunde com strong o primeiro é usado para denotar conteúdo com algum grau de relevância, já o segundo é usado para destacar trechos de texto importantes.</p>
+                <ul>
+                    <p>Referente à Acessibilidade</p>
+                    <li>A presença do elemento mark não é anunciada pela maioria das tecnologias de leitura de tela em sua configuração padrão. </li>
+                    <li>Uma maneira de termos esse anuncio é usando a configuração CSS content, junto com pseudo elementos ::before e ::after</li>
+                    <li>mark::before {content: "[inicio do destaque]";} mark::after{content: "[fim do destaque]";</li>
+                    <li>É importante ressaltar que o excesso de verbosidade afeta negativamente a compreenção dos textos na ferramenta de acessibilidade. Sendo assim é recomendada moderação no uso da tag.</li>                  
+                </ul>
             </div>
         </section>
+        <section>
+            <div>
+                <h2></h2>
+                <p></p>
+                <p></p>
+                <p></p>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+        </section>
+
        
     </main>
 
