--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <strong>Casos típicos de usos da Tag mark</strong>
                 <p>Quando usado em uma citação TQG q, ou citação em bloco TAG blockquote indica texto de interece especial que não está marcado na fonte original.</p>
                 <p>É como usar uma caneta marca texto em um livro para destacar trechos de seu interesse.</p>
-                <p>Mark não se confunde com strong o primeiro é usado para denotar conteúdo com algum grau de relevância, já o segundo é usado para destacar trechos de texto importantes.</p>
+                <p>Mark não se confunde com strong o <mark>primeiro é usado para denotar conteúd</mark>o com algum grau de relevância, já o segundo <strong>é usado para destacar trechos</strong> de texto importantes.</p>
                 <ul>
                     <p>Referente à Acessibilidade</p>
                     <li>A presença do elemento mark não é anunciada pela maioria das tecnologias de leitura de tela em sua configuração padrão. </li>
@@ -102,14 +102,14 @@
         </section>
         <section>
             <div>
-                <h2></h2>
-                <p></p>
-                <p></p>
-                <p></p>
+                <h2>Small: O elemento de comentário lateral </h2> 
+                <p>O Elemento HTML Small representa comentários laterais e texto em letras pequenas, como direitos autorais e textos legais.</p>
+                <p>Por padrão ela renderiza o texto dentro dele em um tamanho de fonte menor, como de pequeno para muito pequeno.</p>
+                <p>Pode ser alternativamente estilizado com Css, como em "<span style="font-size: 0.8em";> Esta frase inteira em letras menores</span</p>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <p>Referente à Acessibilidade</p>
+                    <li>A tag small não afeta como os leitores de tela interpretam o conteúdo. </li>
+                    <li>O texto dentro de uma tag small será lido da mesma forma que outro sem destaque especial.</li>
                 </ul>
             </div>
         </section>
