--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
                     <mark>Tag Small </mark>
                 </li>
                 <li>
-                    <mark>Tag i </mark>
-                </li>
-                <li>
-                    <mark>Tag u </mark>
+                    <mark>Tags i e u</mark>
                 </li>
                 <li>
                     <mark>Tag strong </mark>
@@ -45,17 +42,16 @@
                     <mark>Tags sub e sup </mark>
                 </li>
                 <li>
-                    <mark>Tag li </mark>
-                </li>
-                <li>
                     <mark>tags a, hr e blockquote </mark>
                 </li>
-                <li>
-                    <p>Outras Tags </p>
-                    <mark>Tag font, </mark>
-                    <mark>Tag del, </mark>
-                    <mark>tag abbr.</mark>
-                </li>
+                <ol>
+                    <li>
+                        Outras Tags 
+                    </li>
+                    <li>Tag font</li>
+                    <li>Tag del</li>
+                    <li>Tag abbr</li>
+                </ol>
             </ul>
         </section>
         <section>
@@ -113,6 +109,18 @@
                 </ul>
             </div>
         </section>
+        <div>
+            <h2></h2>
+            <p></p>
+            <p></p>
+            <p></p>
+            <ul>
+                <p></p>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
 
        
     </main>
