--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
                     <mark>tags a, hr e blockquote </mark>
                 </li>
                 <ol>
-                    <li>
-                        Outras Tags 
-                    </li>
+                    <p>Outras Tags</p>
                     <li>Tag font</li>
                     <li>Tag del</li>
                     <li>Tag abbr</li>
