--- a/index.html
+++ b/index.html
@@ -107,18 +107,23 @@
                 </ul>
             </div>
         </section>
-        <div>
-            <h2></h2>
-            <p></p>
-            <p></p>
-            <p></p>
-            <ul>
-                <p></p>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </div>
+        <section>
+            <div>
+                <h2>Tag i e tag u</h2>
+                <p>A tag i é um destaque do tipo itálico feito no trecho.</p>
+                <p>A tag i já foi tipográfica, mas hoje é semântica. Ela representa uma parte do texto com uma difereça semantica na qual comumente se usa o itálico.</p>
+                <p>Um exemplo é usar para termos técnicos ou idioma estrangeiro.</p>
+                <p>A tag u é usada para um texto com notaçãonão articulada, como erros ortográficos internacionais ou para destacar uma palavra sem significado semântico adicional.</p>
+                <p>Pode ser usada para erros intencionais ou gírias.</p>
+                <p>O uso das tags i e u podem confundir os usuários que estão acostumados a serem direcionados a <u>links</u> com o destaque.</p>
+                <ul>
+                    <p>Acessibilidade e NVDA</p>
+                    <li>O NVDA não diferencia as tags i e u.</li>
+                    <li>Ele faz a leitura normal como se elas não estivessem na página</li>
+                </ul>
+            </div>
+        </section>
+
 
        
     </main>
