--- a/index.html
+++ b/index.html
@@ -123,6 +123,37 @@
                 </ul>
             </div>
         </section>
+        <section>
+            <div>
+                <h2>A TAG Strong</h2>
+                <p>Falamos do valor semantico da tag Strong quando comentaos sobre a TAG mark</p>
+                <p>Apresenta em negrito o que estiver entre as tags de abertura e fechamento</p>
+                <p>Sua interface DOM é HTMLElement, sendo que o Firefox implementa a interface HTMLSpanElement para este elemento.</p>
+                <p>O elemento <strong> é utilizado em conteúdos que são de "grande importância"</strong>, incluindo coisas de urgentes (como alertas). </p>
+                <ul>
+                    <p>Acessibilidade NVDA</p>
+                    <li>A documentação NVDA recomenda os elementos HTML adequados para marcar ênfases.</li>
+                    <li> Isso pode ser posteriormente transformado de várias formas (alterações de estilo de fonte, alterações na inflexão da voz, etc.) por navegadores, leitores de tela e outros agentes de usuário.</li>
+                    <li> Esses elementos devem ser usados em lugar dos elementos B e I. </li>
+                    <li>Para saber mais consulte em: <a href="https://www.w3.org/TR/WCAG10-HTML-TECHS/#text-emphasis">Clique aqui para saber mais.</a></li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h2></h2>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <ul>
+                    <p></p>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+        </section>
 
 
        
