--- a/index.html
+++ b/index.html
@@ -141,16 +141,17 @@
         </section>
         <section>
             <div>
-                <h2></h2>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
+                <h2>TAgs ol, ul e li</h2>
+                <p>Ambos os elementos ol e ul, representam uma lista de itens. </p>
+                <p> Diferem porque, com o elemento ol, a ordem é significativa.</p>
+                <p> Já o elemento HTML li é usado para representar um item que faz parte de uma lista. 
+                    Este item deve estar contido em um elemento pai: uma lista ordenada , uma lista desordenada, ou um menu TAG:menu 
+                    e representa uma única entidade dessa lista. </p>
                 <ul>
-                    <p></p>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <p>Interfaces DOM:</p>
+                    <li>UL: HTMLUListElement</li>
+                    <li>LI:  HTMLLIElement</li>
+                    <li>OL: HTMLOListElement</li>
                 </ul>
             </div>
         </section>
