--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 </li>
                 <ol>
                     <p>Outras Tags</p>
-                    <li>Tag font</li>
-                    <li>Tag del</li>
-                    <li>Tag abbr</li>
+                    <li>Tag font: Tamanhos e tipo fonte</li>
+                    <li>Tag del: representa uma parte do texto que foi excluída de um documento.</li>
+                    <li>Tag abbr: representa uma abreviação e opcionalmente fornece uma descrição completa para ela. </li>
                 </ol>
             </ul>
         </section>
@@ -155,9 +155,20 @@
                 </ul>
             </div>
         </section>
-
-
-       
+        <section>
+            <div>
+                <h2>Blockquote: Elemento de citação de bloco.</h2>
+                <p> o Elemento indica que o texto incluído é uma longa citação.</p>
+                <p> A URL para a fonte da citação pode ser dada usando o atributo cite, enquanto uma representação de texto da fonte pode ser dada usando a TAG cite elemento</p>
+                <p><blockquote>Utilize os elementos "Q" e "BLOCKQUOTE" para identificar as citações. A etiqueta "Q" deve ser usada dentro de um pequeno parágrafo para caracterizar uma fonte direta. A etiqueta "BLOCKQUOTE" deve ser usada para citações longas, que são recuadas das margens da página.</blockquote><cite>AcessibilidadeLegal</cite>em <a href="http://acessibilidadelegal.com/13-irlandesas2.php">Veja o site.</a></p>
+                <ul>
+                    <p>Acessibilidade:</p>
+                    <li>O uso correto das etiquetas de citação, Q e BLOCKQUOTE, pode quebrar a página em pedaços grandes de conteúdo, e ajuda os usuários a ler mais facilmente na tela</li>
+                    <li>Alguns leitores de tela lerão o conteúdo identificado como citação com um tom de voz diferente, dando aos usuários pistas importantes sobre a estrutura do documento.</li>
+                    <li>Atenção ao mal uso dos atributos de citação, por isso, confunde os usuários de leitores de tela como o <abbr>NVDA</abbr></li>
+                </ul>
+            </div>
+        </section>     
     </main>
 
 
